chore: GraalVM 19 upgrade